--- a/gallery/Gemfile
+++ b/gallery/Gemfile
@@ -39,7 +39,10 @@ gem 'spring',        group: :development
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
-
+group :production do
+  gem 'pg', '0.15.1'
+  gem 'rails_12factor', '0.0.2'
+end
 # Use debugger
 # gem 'debugger', group: [:development, :test]
 
