--- a/gallery/Gemfile
+++ b/gallery/Gemfile
@@ -43,6 +43,10 @@ group :production do
   gem 'pg'
   gem 'rails_12factor', '0.0.2'
 end
+
+group :development, :test do
+  gem 'sqlite3'
+end
 # Use debugger
 # gem 'debugger', group: [:development, :test]
 
