--- a/gallery/config/database.yml
+++ b/gallery/config/database.yml
@@ -3,22 +3,23 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
-
-
+#
+default: &default
+  adapter: postgresql
+  pool: 5
+  timeout: 5000
 
 development:
-  adapter: postgresql
+  <<: *default
   database: my_database_development
-  pool: 5
-  timeout: 5000
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  database: my_database_test
-  pool: 5
-  timeout: 5000
+  <<: *default
+  database:  my_database_test
 
 production:
-  adapter: postgresql
+  <<: *default
   database: my_database_production
-  pool: 5
-  timeout: 5000
