--- a/gallery/Gemfile
+++ b/gallery/Gemfile
@@ -41,6 +41,8 @@ gem 'spring',        group: :development
 # gem 'capistrano-rails', group: :development
 group :production do
   gem 'pg'
+  gem 'taps'
+  gem 'heroku'
   gem 'rails_12factor', '0.0.2'
 end
 
